modified search logic

--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
               <div class="men-results">
                 <h2 class="result-section-title">Men</h2>
 
-                <div data-brand="nike" data-name="airmax720" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="9uk"
+                  data-name="airmax720"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer1.jpg"
                     alt=""
@@ -107,7 +112,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="8.5uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer2.jpg"
                     alt=""
@@ -122,7 +132,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="11uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer3.jpg"
                     alt=""
@@ -137,7 +152,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="10uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer4.jpg"
                     alt=""
@@ -152,7 +172,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="tubular" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="8uk"
+                  data-name="tubular"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer5.jpg"
                     alt=""
@@ -167,7 +192,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="12uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer6.jpg"
                     alt=""
@@ -182,7 +212,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="10uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer7.jpg"
                     alt=""
@@ -197,7 +232,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airmax95" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="10.5uk"
+                  data-name="airmax95"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer8.jpg"
                     alt=""
@@ -212,7 +252,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="tiempo" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="10uk"
+                  data-name="tiempo"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer9.jpg"
                     alt=""
@@ -227,7 +272,12 @@
                   </div>
                 </div>
 
-                <div data-brand="jordan" data-name="retro8" class="result">
+                <div
+                  data-brand="jordan"
+                  data-size="9uk"
+                  data-name="retro8"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer10.jpg"
                     alt=""
@@ -242,7 +292,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="7uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer11.jpg"
                     alt=""
@@ -257,7 +312,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="8uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer12.jpg"
                     alt=""
@@ -272,7 +332,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="campus" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="9uk"
+                  data-name="campus"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer13.jpg"
                     alt=""
@@ -287,7 +352,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="classics" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="7.5uk"
+                  data-name="classics"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer14.jpg"
                     alt=""
@@ -302,7 +372,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airmax97" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="8uk"
+                  data-name="airmax97"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer15.jpg"
                     alt=""
@@ -317,7 +392,12 @@
                   </div>
                 </div>
 
-                <div data-brand="jordan" data-name="flight32" class="result">
+                <div
+                  data-brand="jordan"
+                  data-size="9uk"
+                  data-name="flight32"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer16.jpg"
                     alt=""
@@ -332,7 +412,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="tiempo" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="11uk"
+                  data-name="tiempo"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer17.jpg"
                     alt=""
@@ -347,7 +432,12 @@
                   </div>
                 </div>
 
-                <div data-brand="jordan" data-name="retro1" class="result">
+                <div
+                  data-brand="jordan"
+                  data-size="8uk"
+                  data-name="retro1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer18.jpg"
                     alt=""
@@ -362,7 +452,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airforce1" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="9uk"
+                  data-name="airforce1"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer19.jpg"
                     alt=""
@@ -377,7 +472,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="runners" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="9uk"
+                  data-name="runners"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer20.jpg"
                     alt=""
@@ -392,7 +492,12 @@
                   </div>
                 </div>
 
-                <div data-brand="jordan" data-name="retro4" class="result">
+                <div
+                  data-brand="jordan"
+                  data-size="9uk"
+                  data-name="retro4"
+                  class="result"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer21.jpg"
                     alt=""
@@ -414,7 +519,12 @@
               <div class="women-results">
                 <h2 class="result-section-title">Women</h2>
 
-                <div data-brand="nike" data-name="wedge" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="5uk"
+                  data-name="wedge"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer1.jpg"
                     alt=""
@@ -429,7 +539,12 @@
                   </div>
                 </div>
 
-                <div data-brand="puma" data-name="suede" class="result">
+                <div
+                  data-brand="puma"
+                  data-size="4uk"
+                  data-name="suede"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer2.jpg"
                     alt=""
@@ -444,7 +559,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="cortez" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="3.5uk"
+                  data-name="cortez"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer3.jpg"
                     alt=""
@@ -459,7 +579,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="wedge" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="4.5uk"
+                  data-name="wedge"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer4.jpg"
                     alt=""
@@ -474,7 +599,12 @@
                   </div>
                 </div>
 
-                <div data-brand="dunlope" data-name="platform" class="result">
+                <div
+                  data-brand="dunlope"
+                  data-size="4uk"
+                  data-name="platform"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer5.jpg"
                     alt=""
@@ -489,7 +619,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="airmaxthea" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="5.5uk"
+                  data-name="airmaxthea"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer6.jpg"
                     alt=""
@@ -504,7 +639,12 @@
                   </div>
                 </div>
 
-                <div data-brand="rebok" data-name="mid" class="result">
+                <div
+                  data-brand="rebok"
+                  data-size="4.5uk"
+                  data-name="mid"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer7.jpg"
                     alt=""
@@ -519,7 +659,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="zxflux" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="6uk"
+                  data-name="zxflux"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer8.jpg"
                     alt=""
@@ -534,7 +679,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="mid" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="5uk"
+                  data-name="mid"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer9.jpg"
                     alt=""
@@ -549,7 +699,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="continental" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="5.5uk"
+                  data-name="continental"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer10.jpg"
                     alt=""
@@ -564,7 +719,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="wedge" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="3.5uk"
+                  data-name="wedge"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer11.jpg"
                     alt=""
@@ -579,7 +739,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="cortez" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="6.5uk"
+                  data-name="cortez"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer12.jpg"
                     alt=""
@@ -594,7 +759,12 @@
                   </div>
                 </div>
 
-                <div data-brand="adidas" data-name="latrainer" class="result">
+                <div
+                  data-brand="adidas"
+                  data-size="5uk"
+                  data-name="latrainer"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer13.jpg"
                     alt=""
@@ -609,7 +779,12 @@
                   </div>
                 </div>
 
-                <div data-brand="" adidas data-name="zxflux" class="result">
+                <div
+                  data-brand="adidas "
+                  data-size="4.5uk"
+                  data-name="zxflux"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer14.jpg"
                     alt=""
@@ -624,7 +799,12 @@
                   </div>
                 </div>
 
-                <div data-brand="nike" data-name="huarache" class="result">
+                <div
+                  data-brand="nike"
+                  data-size="6uk"
+                  data-name="huarache"
+                  class="result"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer15.jpg"
                     alt=""
