--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Snipcart  -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.css"
+    />
     <!-- Font Awesome link -->
     <link
       rel="stylesheet"
@@ -1066,5 +1072,14 @@
         alt="silver hand uk logo"
       />
     </footer>
+    <script
+      async
+      src="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.js"
+    ></script>
+    <div
+      hidden
+      id="snipcart"
+      data-api-key="MDgyODY2MGUtOGEzMC00YzlhLTlmMWItYWU2ODZiODNjNGYwNjM3NTU2MzM4ODk1OTY3NTQ3"
+    ></div>
   </body>
 </html>
