Made a few ajustments

--- a/shop.html
+++ b/shop.html
@@ -650,9 +650,9 @@
           </div>
         </div>
 
-        <button class="snipcart-checkout">
+        <a href="#" class="snipcart-checkout">
           <i class="fa fa-cart-plus"></i>
-        </button>
+        </a>
       </div>
     </header>
     <!----------------------
@@ -757,7 +757,7 @@
           />
           <h3 class="collection-item-name">Nike Airmax 720</h3>
           <h3 class="collection-item-price">£80</h3>
-          <button
+          <a
             class="collection-view-btn snipcart-add-item"
             data-item-id="1"
             data-item-price="89.99"
@@ -765,8 +765,8 @@
             data-item-name="Airmax 720"
             data-item-image="Images/MaleTrainers/maleTrainer1.jpg"
           >
-            view
-          </button>
+            add to cart
+          </a>
         </div>
         <div class="collection-item">
           <img
