--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
     <title>SilverHand UK</title>
-    <!-- google fonts -->
+    <!-------------------- 
+          google fonts 
+    --------------------->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap"
@@ -12,23 +14,37 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Snipcart  -->
+    <!-------------- 
+         Snipcart  
+    ---------------->
 
     <link
       rel="stylesheet"
       href="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.css"
     />
-    <!-- Font Awesome link -->
+    <!-------------------- 
+       Font Awesome link 
+    ---------------------->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- Google Icons link -->
+    <!--------------------
+      Google Icons link 
+    ---------------------->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
+    <!------------------
+      Search bar logic
+      ------------------->
     <script src="searchbar.js" defer></script>
+    <!------------------
+        Site logic  
+    ------------------>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -70,7 +86,9 @@
         alt="Silver Hand UK Logo"
       />
 
-      <!-- Search bar and cart -->
+      <!------------------- 
+        Search bar and cart 
+      ----------------------->
 
       <div class="search-and-cart-container">
         <div class="search-container">
@@ -829,7 +847,11 @@
           </div>
         </div>
 
-        <a href="#"><i class="fa fa-cart-plus"></i></a>
+        <!-- Cart Button -->
+
+        <a class="snipcart-checkout" href="#"
+          ><i class="fa fa-cart-plus"></i
+        ></a>
       </div>
     </header>
 
@@ -873,7 +895,9 @@
           />
         </div>
 
-        <!-- COMPANY LOGO  -->
+        <!-------------- 
+          COMPANY LOGO  
+        ----------------->
 
         <img
           src="/Images/silverHandsLogo.png"
@@ -882,9 +906,9 @@
         />
       </div>
 
-      <!--***************
+      <!-------------------
            Men Collection
-        ******************-->
+        -------------------->
 
       <div class="men-section-container">
         <div class="men-section-product-container">
@@ -895,7 +919,7 @@
               class="men-product-img"
             />
 
-            <a href="" class="shop-men-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-men-product-now-btn">Shop now</a>
           </div>
 
           <div class="men-section-product men-product-2">
@@ -905,7 +929,7 @@
               class="men-product-img"
             />
 
-            <a href="" class="shop-men-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-men-product-now-btn">Shop now</a>
           </div>
 
           <div class="men-section-product men-product-3">
@@ -915,7 +939,7 @@
               class="men-product-img"
             />
 
-            <a href="" class="shop-men-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-men-product-now-btn">Shop now</a>
           </div>
 
           <div class="men-section-product men-product-4">
@@ -925,9 +949,11 @@
               class="men-product-img"
             />
 
-            <a href="" class="shop-men-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-men-product-now-btn">Shop now</a>
           </div>
         </div>
+
+        <!-- Shop button  -->
 
         <a href="shop.html" class="shop-btn-men">Find Your Sole</a>
       </div>
@@ -979,7 +1005,7 @@
               class="women-product-img"
             />
 
-            <a href="" class="shop-women-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-women-product-now-btn">Shop now</a>
           </div>
 
           <div class="women-section-product women-product-2">
@@ -989,7 +1015,7 @@
               class="women-product-img"
             />
 
-            <a href="" class="shop-women-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-women-product-now-btn">Shop now</a>
           </div>
 
           <div class="women-section-product women-product-3">
@@ -999,7 +1025,7 @@
               class="women-product-img"
             />
 
-            <a href="" class="shop-women-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-women-product-now-btn">Shop now</a>
           </div>
 
           <div class="women-section-product women-product-4">
@@ -1009,7 +1035,7 @@
               class="women-product-img"
             />
 
-            <a href="#" class="shop-women-product-now-btn">Shop now</a>
+            <a href="shop.html" class="shop-women-product-now-btn">Shop now</a>
           </div>
         </div>
 
