Added cart item count

--- a/index.html
+++ b/index.html
@@ -849,9 +849,10 @@
 
         <!-- Cart Button -->
 
-        <a class="snipcart-checkout" href="#"
-          ><i class="fa fa-cart-plus"></i
-        ></a>
+        <a class="cart snipcart-checkout" href="#"
+          ><i class="fa fa-cart-plus"></i>
+          <span class="snipcart-items-count">0</span>
+        </a>
       </div>
     </header>
 
