--- a/shop.html
+++ b/shop.html
@@ -650,8 +650,9 @@
           </div>
         </div>
 
-        <a href="#" class="snipcart-checkout">
+        <a href="#" class="cart snipcart-checkout">
           <i class="fa fa-cart-plus"></i>
+          <span class="snipcart-items-count">0</span>
         </a>
       </div>
     </header>
