Added Sizes to trainers

--- a/shop.html
+++ b/shop.html
@@ -757,6 +757,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airmax 720</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£80</h3>
           <a
             class="collection-view-btn snipcart-add-item"
@@ -777,6 +778,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 reflect</h3>
+          <h3 class="size">Size: 8.5 uk</h3>
           <h3 class="collection-item-price">£60</h3>
           <a
             href=""
@@ -797,6 +799,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 Mid</h3>
+          <h3 class="size">Size: 11 uk</h3>
           <h3 class="collection-item-price">£70</h3>
           <a
             href=""
@@ -817,6 +820,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="size">Size: 10 uk</h3>
           <h3 class="collection-item-price">£65</h3>
           <a
             href=""
@@ -837,6 +841,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas Tubular</h3>
+          <h3 class="size">Size: 8 uk</h3>
           <h3 class="collection-item-price">£50</h3>
           <a
             href=""
@@ -857,6 +862,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 flyknit</h3>
+          <h3 class="size">Size: 12 uk</h3>
           <h3 class="collection-item-price">£65</h3>
           <a
             href=""
@@ -878,6 +884,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="size">Size: 10 uk</h3>
           <h3 class="collection-item-price">£60</h3>
           <a
             href=""
@@ -898,6 +905,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airmax 95</h3>
+          <h3 class="size">Size: 10.5 uk</h3>
           <h3 class="collection-item-price">£70</h3>
           <a
             href=""
@@ -918,6 +926,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Tiempo</h3>
+          <h3 class="size">Size: 10 uk</h3>
           <h3 class="collection-item-price">£50</h3>
           <a
             href=""
@@ -938,6 +947,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Jordan retro 8</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£90</h3>
           <a
             href=""
@@ -958,6 +968,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 suede</h3>
+          <h3 class="size">Size: 7 uk</h3>
           <h3 class="collection-item-price">£60</h3>
           <a
             href=""
@@ -978,6 +989,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="size">Size: 8 uk</h3>
           <h3 class="collection-item-price">£55</h3>
           <a
             href=""
@@ -998,6 +1010,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas Campo</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£40</h3>
           <a
             href=""
@@ -1018,6 +1031,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas classic</h3>
+          <h3 class="size">Size: 7.5 uk</h3>
           <h3 class="collection-item-price">£60</h3>
           <a
             href=""
@@ -1038,6 +1052,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airmax 97</h3>
+          <h3 class="size">Size: 8 uk</h3>
           <h3 class="collection-item-price">£75</h3>
           <a
             href=""
@@ -1058,6 +1073,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Jordan flight 32</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£65</h3>
           <a href=""  class="collection-view-btn snipcart-add-item"
           data-item-id="m16"
@@ -1074,6 +1090,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Tiempo</h3>
+          <h3 class="size">Size: 11 uk</h3>
           <h3 class="collection-item-price">£65</h3>
           <a href=""  class="collection-view-btn snipcart-add-item"
           data-item-id="m17"
@@ -1090,6 +1107,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Jordan retro 1</h3>
+          <h3 class="size">Size: 8 uk</h3>
           <h3 class="collection-item-price">£85</h3>
           <a href=""  class="collection-view-btn snipcart-add-item"
           data-item-id="m18"
@@ -1106,6 +1124,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href=""  class="collection-view-btn snipcart-add-item"
           data-item-id="m19"
@@ -1122,6 +1141,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Runners</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£40</h3>
           <a href=""  class="collection-view-btn snipcart-add-item"
           data-item-id="m20"
@@ -1138,6 +1158,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Jordan retro 4</h3>
+          <h3 class="size">Size: 9 uk</h3>
           <h3 class="collection-item-price">£95</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="m21"
@@ -1154,6 +1175,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="size">Size: 5 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f1"
@@ -1170,6 +1192,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Puma Classics suede</h3>
+          <h3 class="size">Size: 4 uk</h3>
           <h3 class="collection-item-price">£35</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f2"
@@ -1186,6 +1209,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Cortez</h3>
+          <h3 class="size">Size: 3.5 uk</h3>
           <h3 class="collection-item-price">£30</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f3"
@@ -1202,6 +1226,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="size">Size: 4.5 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f4"
@@ -1218,6 +1243,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Dunlop Platform</h3>
+          <h3 class="size">Size: 4 uk</h3>
           <h3 class="collection-item-price">£25</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f5"
@@ -1234,6 +1260,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Airmax Thea</h3>
+          <h3 class="size">Size: 5.5 uk</h3>
           <h3 class="collection-item-price">£70</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f6"
@@ -1250,6 +1277,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Rebok Hightop</h3>
+          <h3 class="size">Size: 4.5 uk</h3>
           <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f7"
@@ -1266,6 +1294,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas zx-flux</h3>
+          <h3 class="size">Size: 6 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f8"
@@ -1282,6 +1311,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Jordan retro 1</h3>
+          <h3 class="size">Size: 5 uk</h3>
           <h3 class="collection-item-price">£60</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f9"
@@ -1298,6 +1328,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas Continental</h3>
+          <h3 class="size">Size: 5.5 uk</h3>
           <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f10"
@@ -1314,6 +1345,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="size">Size: 3.5 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f11"
@@ -1330,6 +1362,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Cortez</h3>
+          <h3 class="size">Size: 6.5 uk</h3>
           <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f12"
@@ -1346,6 +1379,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas LA trainer</h3>
+          <h3 class="size">Size: 5 uk</h3>
           <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f13"
@@ -1362,6 +1396,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Adidas zx-flux</h3>
+          <h3 class="size">Size: 4.5 uk</h3>
           <h3 class="collection-item-price">£50</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f14"
@@ -1378,6 +1413,7 @@
             class="collection-img"
           />
           <h3 class="collection-item-name">Nike Huarache</h3>
+          <h3 class="size">Size: 6 uk</h3>
           <h3 class="collection-item-price">£75</h3>
           <a href="" class="collection-view-btn snipcart-add-item"
           data-item-id="f15"
