Added link to home page on logos in the header of each page

--- a/about.html
+++ b/about.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="about.css" />
     <title>About silverhand</title>
-    <!-- google fonts -->
+    <!------------------- 
+          google fonts 
+    --------------------->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <!-- Font Awesome link -->
+    <!------------------- 
+      Font Awesome link 
+    -------------------->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- Google Icons link -->
+    <!------------------- 
+      Google Icons link 
+    --------------------->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -25,6 +31,9 @@
     <script src="about.js" defer></script>
     <script src="searchbar.js" defer></script>
   </head>
+  <!------------------
+      Body Start
+    ----------------->
   <body>
     <!-------------------------------------
     Header including navigation bar and logo
@@ -58,12 +67,15 @@
           </li>
         </ul>
       </nav>
-
-      <img
-        src="/Images/silverHandsLogo.png"
-        class="logo"
-        alt="Silver Hand UK Logo"
-      />
+      <!------------------
+        Company logo
+       ------------------->
+      <a href="index.html" class="logo"
+        ><img
+          src="/Images/silverHandsLogo.png"
+          class="c-logo"
+          alt="Silver Hand UK Logo"
+      /></a>
 
       <!-- Search bar and cart -->
 
@@ -663,7 +675,7 @@
       --------------->
 
     <main class="main">
-      <div class="paragaphs">
+      <div class="paragraphs">
         <p class="about-paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
           quaerat assumenda mollitia nulla laudantium magnam, nisi sed sapiente
