--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     ------------------>
     <script src="app.js" defer></script>
   </head>
+
+  <!--------------------------- 
+           Body Starts
+   ---------------------------->
   <body>
     <!-------------------------------------
     Header including navigation bar and logo
@@ -80,11 +84,14 @@
         </ul>
       </nav>
 
-      <img
+      <!----------------
+        Company Logo
+        --------------->
+      <a href="index.html" class="logo"><img
         src="/Images/silverHandsLogo.png"
-        class="logo"
+        class="c-logo"
         alt="Silver Hand UK Logo"
-      />
+      /></a>
 
       <!------------------- 
         Search bar and cart 
