--- a/sell.html
+++ b/sell.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SilverHand UK</title>
-    <!-- google fonts -->
+    <!---------------- 
+        google fonts 
+    ------------------->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap"
@@ -12,12 +14,16 @@
     />
     <link rel="stylesheet" href="sell.css" />
 
-    <!-- Font Awesome link -->
+    <!--------------------
+       Font Awesome link 
+      -------------------->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- Google Icons link -->
+    <!------------------- 
+      Google Icons link 
+    ---------------------->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -57,11 +63,12 @@
         </ul>
       </nav>
 
-      <img
-        src="/Images/silverHandsLogo.png"
-        class="logo"
-        alt="Silver Hand UK Logo"
-      />
+      <a href="index.html" class="logo"
+        ><img
+          src="/Images/silverHandsLogo.png"
+          class="c-logo"
+          alt="Silver Hand UK Logo"
+      /></a>
 
       <!-- Search bar and cart -->
 
