--- a/shop.html
+++ b/shop.html
@@ -32,6 +32,9 @@
     <script src="about.js" defer></script>
     <script src="shop.js" defer></script>
   </head>
+  <!-----------------
+      Body starts
+    ----------------->
   <body>
     <!-------------------------------------
     Header including navigation bar and logo
@@ -65,11 +68,11 @@
         </ul>
       </nav>
 
-      <img
+      <a href='index.html' class="logo"><img
         src="/Images/silverHandsLogo.png"
-        class="logo"
+        class="c-logo"
         alt="Silver Hand UK Logo"
-      />
+      /></a>
 
       <!-- Search bar and cart -->
 
