--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <!-- google fonts -->
+    <!--------------- 
+      google fonts 
+    ------------------>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap"
@@ -13,12 +15,16 @@
 
     <title>contact</title>
     <link rel="stylesheet" href="contactStyle.css" />
-    <!-- Font Awesome Link -->
+    <!------------------ 
+      Font Awesome Link 
+    -------------------->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- Google Icons Link -->
+    <!------------------ 
+      Google Icons Link 
+    -------------------->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -57,11 +63,15 @@
         </ul>
       </nav>
 
-      <img
-        src="/Images/silverHandsLogo.png"
-        class="logo"
-        alt="Silver Hand UK Logo"
-      />
+      <!-----------------
+         Company logo
+        ------------------>
+      <a href="index.html" class="logo"
+        ><img
+          src="/Images/silverHandsLogo.png"
+          class="c-logo"
+          alt="Silver Hand UK Logo"
+      /></a>
 
       <!-- Search bar and cart -->
 
