Added cart functionality to all pages

--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,9 @@
           </div>
         </div>
 
-        <!-- Cart Button -->
+        <!--------------
+           Cart button
+          -------------->
 
         <a class="cart snipcart-checkout" href="#"
           ><i class="fa fa-cart-plus"></i>
@@ -1419,6 +1421,9 @@
         alt="silver hand uk logo"
       />
     </footer>
+    <!------------------
+      Snipcart logic
+     ------------------>
     <script
       async
       src="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.js"
