--- a/about.html
+++ b/about.html
@@ -28,7 +28,21 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <!-------------- 
+         Snipcart  
+    ---------------->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.css"
+    />
+    <!------------------
+        Site logic
+      ------------------>
     <script src="about.js" defer></script>
+    <!----------------
+      Search bar logic
+      ---------------->
     <script src="searchbar.js" defer></script>
   </head>
   <!------------------
@@ -656,7 +670,13 @@
           </div>
         </div>
 
-        <a href="#"><i class="fa fa-cart-plus"></i></a>
+        <!--------------
+           Cart button
+          -------------->
+        <a class="cart snipcart-checkout" href="#"
+          ><i class="fa fa-cart-plus"></i>
+          <span class="snipcart-items-count">0</span>
+        </a>
       </div>
     </header>
 
@@ -748,5 +768,17 @@
         alt="silver hand uk logo"
       />
     </footer>
+    <!----------------
+        Snipcart logic
+      ----------------->
+    <script
+      async
+      src="https://cdn.snipcart.com/themes/v3.1.1/default/snipcart.js"
+    ></script>
+    <div
+      hidden
+      id="snipcart"
+      data-api-key="MDgyODY2MGUtOGEzMC00YzlhLTlmMWItYWU2ODZiODNjNGYwNjM3NTU2MzM4ODk1OTY3NTQ3"
+    ></div>
   </body>
 </html>
